# indoor-pathfinding

./: .gitignore  .mise.toml  ARCHITECTURE.md  Cargo.toml  RUN.md  TODO.md  design.pen  pubspec.yaml  pyproject.toml
android/app/: build.gradle
android/app/src/main/kotlin/com/example/indoor_pathfinding/: MainActivity.kt
client/flutter_app/: README.md  pubspec.yaml
client/flutter_app/android/app/: build.gradle
client/flutter_app/android/app/src/main/: AndroidManifest.xml
client/flutter_app/android/app/src/main/kotlin/com/example/indoor_pathfinding/: MainActivity.kt
client/flutter_app/android/app/src/main/kotlin/com/example/indoor_pathfinding/bridge/: CameraBridge.kt  ResultBridge.kt  SessionBridge.kt
client/flutter_app/android/app/src/main/kotlin/com/example/indoor_pathfinding/sensor/: BaroCollector.kt  CameraCapture.kt  ImuCollector.kt
client/flutter_app/ios/Runner/: Info.plist
client/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
client/flutter_app/lib/api/: api_client.dart  map_api.dart
client/flutter_app/lib/models/: engine_status.dart  map_model.dart
client/flutter_app/lib/screens/: home_screen.dart  map_create_camera_screen.dart  map_create_info_screen.dart  map_list_screen.dart  pathfinding_camera_screen.dart  settings_screen.dart
client/flutter_app/lib/services/: result_stream.dart  session_service.dart
client/flutter_app/lib/theme/: app_colors.dart  app_theme.dart
client/flutter_app/lib/widgets/: hud_overlay.dart  map_card.dart
client/flutter_app/test/: widget_test.dart
client/rust_core/: Cargo.toml  uniffi.toml
client/rust_core/src/: aggregator.rs  engine.rs  grpc_client.rs  lib.rs  types.rs
docker/: .env  api.Dockerfile  docker-compose.yml  entrypoint.sh  ros2-base.Dockerfile
docker/ros2/: ros2.Dockerfile  rosbag2.yaml
docker/slam/: must3r.Dockerfile  orbslam3.Dockerfile
lib/: main.dart
lib/screens/: map_create_camera_screen.dart  map_list_screen.dart  pathfinding_camera_screen.dart
lib/widgets/: action_card.dart
protocols/proto/: common.proto  sensor.proto  service.proto  sync.proto
protocols/proto/localization/: request.proto  response.proto
protocols/proto/mapping/: request.proto  response.proto
protocols/proto/session/: request.proto  response.proto
protocols/rust/: Cargo.toml  build.rs
protocols/rust/src/: lib.rs
scripts/: extract_rosbag_images.py
server/api/app/: database.py  exception_handlers.py  exceptions.py  main.py  models.py
server/api/app/dto/: map_dto.py  slam_dto.py
server/api/app/repository/: map_repository.py
server/api/app/routers/: map_viewer.py  maps.py  slam.py
server/api/app/services/: must3r_service.py  slam_service.py
server/db/: alembic.ini
server/db/alembic/: env.py
server/db/alembic/versions/: 001_create_maps_table.py  002_add_slam_status_to_maps.py
server/gateway/: Cargo.toml
server/gateway/src/: main.rs  session_manager.rs
server/gateway/src/ros2/: commands.rs  messages.rs  mod.rs  noop.rs  publisher.rs  recorder.rs  recorder_noop.rs
server/gateway/src/services/: localization.rs  mapping.rs  mod.rs  session.rs
server/slam/: CMakeLists.txt  package.xml
server/slam/config/: camera.yaml
server/slam/launch/: orbslam.launch.py
server/slam/must3r/: api.py  node.py
server/slam/src/: orbslam_node.cpp
