[package]
name = "indoor-pathfinding-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "rust_core"

[dependencies]
indoor-pathfinding-protocols = { path = "../../protocols/rust" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
