[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
indoor-pathfinding-protocols = { path = "../../protocols/rust" }
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
